Fix cut off content in tabs.

--- a/app/assets/stylesheets/screen.scss
+++ b/app/assets/stylesheets/screen.scss
@@ -27,6 +27,11 @@
   margin-top:        0;
 }
 
+// Tabs
+.tab-content {
+  overflow: visible;
+}
+
 // Login
 #new_user {
 	clear: both;
